--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,5 +33,7 @@ serde = { version="1", features=["derive"] }
 serde_json = "1"
 rmp-serde = "1"
 rmpv = { version = "1", features = ["with-serde"] }
+getrandom = { version = "0.2", features = ["js"] }
+serde-wasm-bindgen = "0.5"
 
 [target.'cfg(not(web))'.dependencies]
