--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ default = ["web"]
 log = "0.4"
 console_error_panic_hook = "0.1.6"
 console_log = "1.0"
-wasm-bindgen = "0.2"
+wasm-bindgen = { version = "0.2" }
 wasm-bindgen-futures = "0.4.30"
 js-sys = "0.3"
 web-sys = { version = "0.3", features = [
@@ -28,6 +28,14 @@ web-sys = { version = "0.3", features = [
     "FileReader",
     "MessageEvent",
     "ProgressEvent",
+    "MutationObserver",
+    "Node",
+    "Document",
+    "HtmlElement",
+    "MutationObserverInit",
+    "MutationRecord",
+    "HtmlCollection",
+    "HtmlInputElement",
 ], optional = true }
 serde = { version="1", features=["derive"] }
 serde_json = "1"
@@ -35,5 +43,6 @@ rmp-serde = "1"
 rmpv = { version = "1", features = ["with-serde"] }
 getrandom = { version = "0.2", features = ["js"] }
 serde-wasm-bindgen = "0.5"
+bimap = "0.6"
 
 [target.'cfg(not(web))'.dependencies]
