build and ready

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,8 @@ web-sys = { version = "0.3", features = [
     "MutationRecord",
     "HtmlCollection",
     "HtmlInputElement",
+    "NodeList",
+    "DomTokenList",
 ], optional = true }
 serde = { version="1", features=["derive"] }
 serde_json = "1"
