--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 /target
 /Cargo.lock
 /dist
+/pkg
+/.vscode
+/bin
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
