--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -1,7 +1,7 @@
-name: Build
+name: Upload Package
 
 on:
-    push:
+    workflow_dispatch
 
 jobs:
     main:
@@ -19,5 +19,11 @@ jobs:
               uses: jetli/wasm-pack-action@v0.4.0
               with:
                 version: "latest"
-            - name: "Build All"
-              run: ./gradlew build
+            - name: "Validate Gradle wrapper"
+              uses: gradle/wrapper-validation-action@ccb4328a959376b642e027874838f60f8e596de3
+            - name: "Publish package"
+              uses: gradle/gradle-build-action@749f47bda3e44aa060e82d7b3ef7e40d953bd629
+              with:
+                arguments: publish
+              env:
+                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
