--- a/build.gradle
+++ b/build.gradle
@@ -45,9 +45,9 @@ jar {
 publishing {
     publications {
         maven(MavenPublication) {
-            groupId = 'org.wilsonwatson'
-            artifactId = 'nt4wasm'
-            version = '0.1'
+            groupId = "org.wilsonwatson"
+            artifactId = System.getenv('PATCH') == null ? "nt4wasm" : "nt4wasm_bleeding_edge"
+            version = "0." + (System.getenv('PATCH') == null ? "0" : System.getenv('PATCH'))
 
             from components.java
         }
