--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
     main:
-        name: Build
+        name: Release
         runs-on: ubuntu-22.04
         steps:
             - name: "Checkout Repository"
