--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,28 @@ repositories {
 def version_major = 0
 def version_minor = 1
 
-def group = "org.wilsonwatson"
+def username = "wilsonwatson"
+def group = "org." + username
 def artifact = System.getenv('PATCH') == null ? "nt4wasm" : "nt4wasm_bleeding_edge"
 def version_str = version_major + "." + version_minor + "." + (System.getenv('PATCH') == null ? "0" : System.getenv('PATCH'))
+
+task check_minor_bump {
+    doLast {
+        if (System.getenv("GITHUB_TOKEN") != null) {
+            // check if version_minor is bumped
+            def req = new URL("https://api.github.com/users/" + username + "/packages/maven/" + group + "." + artifact + "/versions").openConnection()
+            req.setRequestMethod("GET")
+            req.setRequestProperty("Content-Type", "application/vnd.github+json")
+            req.setRequestProperty("Authorization", "Bearer " + System.getenv("GITHUB_TOKEN"))
+            req.setRequestProperty("X-GitHub-Api-Version", "2022-11-28")
+            req.setDoOutput(true)
+            req.getOutputStream().write()
+            logger.quiet "Status code: ${req.getResponseCode()}" // HTTP request done on first read
+            def resp = req.getInputStream().getText()
+            logger.quiet "Response: ${resp}"
+        }
+    }
+}
 
 sourceCompatibility = JavaVersion.VERSION_11
 targetCompatibility = JavaVersion.VERSION_11
@@ -37,6 +56,8 @@ task buildWasm(type: Exec) {
         output.write('') // clear
         toConcatenate.each { f -> output << f.text }
     }
+
+    dependsOn(check_minor_bump)
 }
 
 tasks.jar.dependsOn(buildWasm)
