--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+import groovy.json.JsonSlurper;
 
 plugins {
     id 'java-library'
@@ -28,7 +29,7 @@ task check_minor_bump {
             req.setRequestProperty("X-GitHub-Api-Version", "2022-11-28")
             req.setDoOutput(true)
             logger.quiet "Status code: ${req.getResponseCode()}" // HTTP request done on first read
-            def resp = req.getInputStream().getText()
+            def resp = new JsonSlurper().parseText(req.getInputStream().getText())
             logger.quiet "Response: ${resp}"
         }
     }
