--- a/build.gradle
+++ b/build.gradle
@@ -33,9 +33,13 @@ task check_minor_bump {
             resp.each { item -> 
                 logger.quiet "item: ${item.name}"
                 logger.quiet "item split: ${item.name.split("\\.")}"
-                def item_minor = Integer.parseInt(item.name.split("\\.")[1]);
-                if (item_minor >= version_major) {
-                    throw new GradleException("Need to bump up minor version!")
+                def parts = item.name.split("\\.");
+                def item_major = Integer.parseInt(parts[0])
+                def item_minor = Integer.parseInt(parts[1]);
+                if (item_major > version_major) {
+                    throw new GradleException("Need to bump up major version to >= ${item_major}!")
+                } else if (item_major == version_major && item_minor >= version_minor) {
+                    throw new GradleException("Need to bump up minor version to > ${item_minor}!")
                 }
             }
             logger.quiet "Response: ${resp}"
