--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,9 @@ task check_minor_bump {
                 logger.quiet "item: ${item.name}"
                 logger.quiet "item split: ${item.name.split("\\.")}"
                 def parts = item.name.split("\\.");
+                if(parts.length < 3) {
+                    continue;
+                }
                 def item_major = Integer.parseInt(parts[0])
                 def item_minor = Integer.parseInt(parts[1]);
                 def item_patch = Integer.parseInt(parts[2]);
