--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,48 +3,23 @@ name = "nt4-wasm"
 version = "0.1.0"
 edition = "2021"
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
 [lib]
 crate-type = ["cdylib", "rlib"]
 
-[features]
-web = ["dep:web-sys"]
-default = ["web"]
-
 [dependencies]
-log = "0.4"
 console_error_panic_hook = "0.1.6"
-console_log = "1.0"
 wasm-bindgen = { version = "0.2" }
 wasm-bindgen-futures = "0.4.30"
 js-sys = "0.3"
-web-sys = { version = "0.3", features = [
-    "Window",                # setInterval
-    "Performance",           # now
-    "WebSocket",             # websocket
-    "CustomElementRegistry", # custom data in Window
-    "BinaryType",
-    "Blob",
-    "ErrorEvent",
-    "FileReader",
-    "MessageEvent",
-    "ProgressEvent",
-    "MutationObserver",
-    "Node",
-    "Document",
-    "HtmlElement",
-    "MutationObserverInit",
-    "MutationRecord",
-    "HtmlCollection",
-    "HtmlInputElement",
-    "NodeList",
-    "DomTokenList",
-], optional = true }
 serde = { version="1", features=["derive"] }
 serde_json = "1"
 rmp-serde = "1"
-rmpv = { version = "1", features = ["with-serde"] }
-getrandom = { version = "0.2", features = ["js"] }
 serde-wasm-bindgen = "0.5"
-bimap = "0.6"
-
-[target.'cfg(not(web))'.dependencies]
+serde_bytes = "0.11"
+paste = "1"
+chrono = "0.4"
+web-sys = { version="0.3", features = [
+    "Performance"
+]}
